@@ -1,4 +1,5 @@
 from django.contrib import messages
+from django.contrib.auth import logout
 from django.shortcuts import render_to_response, render
 from django.http import HttpResponseRedirect
 from django.template import RequestContext
@@ -97,21 +98,40 @@ def render_authentication_error(request, extra_context={}):
         "socialaccount/authentication_error.html",
         extra_context, context_instance=RequestContext(request))
 
-def _add_social_account(request, sociallogin): 
-    sociallogin.connect(request, request.user)
-    try:
-        signals.social_account_added.send(sender=SocialLogin,
-                                          request=request, 
-                                          sociallogin=sociallogin)
-    except ImmediateHttpResponse as e:
-        return e.response
+def _add_social_account(request, sociallogin):
+    if request.user.is_anonymous():
+        # This should not happen. Simply redirect to the connections
+        # view (which has a login required)
+        return reverse('socialaccount_connections')
+    level = messages.INFO
+    message = 'socialaccount/messages/account_connected.txt'
+    if sociallogin.is_existing:
+        if sociallogin.account.user != request.user:
+            # Social account of other user. For now, this scenario
+            # is not supported. Issue is that one cannot simply
+            # remove the social account from the other user, as
+            # that may render the account unusable.
+            level = messages.ERROR
+            message = 'socialaccount/messages/account_connected_other.txt'
+        else:
+            # This account is already connected -- let's play along
+            # and render the standard "account connected" message
+            # without actually doing anything.
+            pass
+    else:
+        # New account, let's connect
+        sociallogin.connect(request, request.user)
+        try:
+            signals.social_account_added.send(sender=SocialLogin,
+                                              request=request, 
+                                              sociallogin=sociallogin)
+        except ImmediateHttpResponse as e:
+            return e.response
     default_next = get_adapter() \
         .get_connect_redirect_url(request,
                                   sociallogin.account)
     next_url = sociallogin.get_redirect_url(request) or default_next
-    get_account_adapter().add_message(request, 
-                                      messages.INFO, 
-                                      'socialaccount/messages/account_connected.txt')
+    get_account_adapter().add_message(request, level, message)
     return HttpResponseRedirect(next_url)
 
 def complete_social_login(request, sociallogin):
@@ -124,29 +144,20 @@ def complete_social_login(request, sociallogin):
                                       sociallogin=sociallogin)
     except ImmediateHttpResponse as e:
         return e.response
-    if request.user.is_authenticated():
-        if sociallogin.is_existing:
-            # Existing social account, existing user
-            if sociallogin.account.user != request.user:
-                # Social account of other user. Simply logging in may
-                # not be correct in the case that the user was
-                # attempting to hook up another social account to his
-                # existing user account. For now, this scenario is not
-                # supported. Issue is that one cannot simply remove
-                # the social account from the other user, as that may
-                # render the account unusable.
-                pass
-            ret = _login_social_account(request, sociallogin)
-        else:
-            # New social account
-            ret = _add_social_account(request, sociallogin)
+    if sociallogin.state.get('process') == 'connect':
+        return _add_social_account(request, sociallogin)
     else:
-        if sociallogin.is_existing:
-            # Login existing user
-            ret = _login_social_account(request, sociallogin)
-        else:
-            # New social user
-            ret = _process_signup(request, sociallogin)
+        return _complete_social_login(request, sociallogin)
+
+def _complete_social_login(request, sociallogin):
+    if request.user.is_authenticated():
+        logout(request)
+    if sociallogin.is_existing:
+        # Login existing user
+        ret = _login_social_account(request, sociallogin)
+    else:
+        # New social user
+        ret = _process_signup(request, sociallogin)
     return ret
 
 
