@@ -18,7 +18,7 @@ for a {{site_name}} account and sign in below:{% endblocktrans %}</p>
 <div class="socialaccount_ballot">
 
   <ul class="socialaccount_providers">
-    {% include "socialaccount/snippets/provider_list.html" %}
+    {% include "socialaccount/snippets/provider_list.html" with process="login" %}
   </ul>
 
   <div class="login-or">{% trans 'or' %}</div>
