@@ -46,7 +46,7 @@
 <h2>{% trans 'Add a 3rd Party Account' %}</h2>
 
 <ul class="socialaccount_providers">
-{% include "socialaccount/snippets/provider_list.html" %}
+{% include "socialaccount/snippets/provider_list.html" with process="connect" %}
 </ul>
 
 {% include "socialaccount/snippets/login_extra.html" %}
